--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,34 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            git zip unzip openjdk-17-jdk \
-            python3-pip python3-setuptools \
-            libffi-dev libssl-dev \
-            autoconf automake libtool \
-            build-essential
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v3
 
-      - name: Install Python dependencies
-        run: |
-          pip install --upgrade pip
-          pip install buildozer cython==0.29.33
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y git zip unzip openjdk-17-jdk
+        pip install --upgrade pip
+        pip install buildozer cython==0.29.33
 
-      - name: Build APK with Buildozer
-        run: |
-          buildozer android debug
+    - name: Build APK with Buildozer
+      run: |
+        buildozer android debug
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: salomatli-hayot-apk
-          path: bin/*.apk
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: salomatli-hayot-apk
+        path: bin/*.apk
