--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,19 +17,53 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Set up Android SDK
-      uses: android-actions/setup-android@v3
+    - name: Set up Java (JDK 17)
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y git zip unzip openjdk-17-jdk
+        # Buildozer uchun barcha zaruriy kutubxonalar
+        sudo apt-get install -y \
+          build-essential \
+          git \
+          python3-dev \
+          ffmpeg \
+          libsdl2-dev \
+          libsdl2-image-dev \
+          libsdl2-mixer-dev \
+          libsdl2-ttf-dev \
+          libportmidi-dev \
+          libswscale-dev \
+          libavformat-dev \
+          libavcodec-dev \
+          zlib1g-dev \
+          libgstreamer1.0 \
+          gstreamer1.0-plugins-base \
+          gstreamer1.0-plugins-good \
+          libffi-dev \
+          libssl-dev \
+          autoconf \
+          automake \
+          libtool \
+          pkg-config \
+          cmake \
+          unzip \
+          zip
+
+    - name: Install Python tools
+      run: |
         pip install --upgrade pip
-        pip install buildozer cython==0.29.33
+        pip install buildozer cython==0.29.33 setuptools
 
     - name: Build APK with Buildozer
       run: |
-        buildozer android debug
+        # BU YERDA ASOSIY O'ZGARISH:
+        # 'yes |' buyrug'i barcha litsenziyalarni avtomatik qabul qiladi
+        yes | buildozer android debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
